--- a/scss/abstract/_color.scss
+++ b/scss/abstract/_color.scss
@@ -1,5 +1,7 @@
-$clr-primary: #fa555d;
+$clr-primary: rgb(250, 85, 93);
 $clr-dark: #252429;
 $clr-gray: #343438;
 $clr-light: #fcfaf2;
 $clr-light-gray: #3e3e42;
+$clr-light-primary: #fca8ac;
+$clr-gray-border: #d9d9db;
