--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -2,8 +2,6 @@
 @use "./typography" as *;
 
 body {
-  color: $clr-light;
-  font-family: $font-family;
   font-size: 2rem;
   overflow-x: hidden;
   line-height: 1.4;
@@ -68,7 +66,7 @@ thead,
 tr,
 th,
 td {
-  font-family: $font-family;
+  font-family: $font-primary;
   border: 0;
   font-size: 100%;
   margin: 0;
