--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -3,8 +3,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
-$font-family: "Ubuntu", sans-serif;
-$font-family-condensed: "Ubuntu Condensed", Arial, sans-serif;
+$font-primary: "Ubuntu", sans-serif;
+$font-primary-condensed: "Ubuntu Condensed", sans-serif;
 
 html {
   font-size: 62.5%;
