--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -6,12 +6,17 @@
   background-color: transparent;
   border: 1px solid transparent;
   font-size: 1rem;
-  font-family: $font-family;
+  font-family: $font-primary-condensed;
   &.bg--primary {
     @extend .btn;
     background-color: $clr-primary;
     color: $clr-light;
     font-size: 1rem;
     font-weight: 600;
+    &:hover {
+      background-color: $clr-light;
+      color: $clr-dark;
+      transition: 0.5s;
+    }
   }
 }
