--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -20,11 +20,15 @@
     display: flex;
     flex-direction: row;
     li a {
-      padding: 5rem 1rem;
+      padding: 4.8rem 1rem;
       color: $clr-light;
       &:hover {
-        border-bottom: 7px solid $clr-primary;
+        border-bottom: 10px solid $clr-primary;
+        transition: 0.2s;
       }
+    }
+    .active {
+      border-bottom: 10px solid $clr-primary;
     }
   }
 }
