--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -3,7 +3,7 @@
 
 // Banner
 .homeBanner {
-  &__slider {
+  &__wrapper {
     position: relative;
   }
   &__img {
@@ -13,18 +13,18 @@
     h2 {
       font-size: 3rem;
       position: absolute;
-      margin-left: 61rem;
-      margin-top: 15rem;
+      margin-left: 68%;
+      margin-top: 15%;
     }
   }
 }
 
-// SERVICES
+// HOME SERVICES
 .homeServices {
   &__wrapper {
     display: flex;
     flex-direction: row;
-    gap: 1rem;
+    gap: 2rem;
     text-align: center;
     justify-content: center;
   }
@@ -34,12 +34,98 @@
     gap: 2rem;
     max-width: 18rem;
     align-items: center;
+    margin-bottom: 2rem;
     h3 {
+      width: 100%;
+      padding-top: 2rem;
       padding-bottom: 3rem;
+      border-bottom: 3px solid $clr-light-gray;
     }
     i {
       font-size: 3rem;
-      border-top: 3px solid $clr-light-gray;
+      color: $clr-light;
+    }
+    a {
+      font-family: $font-primary-condensed;
+    }
+  }
+}
+
+// SERVICES SLIDER
+.services {
+  &__title {
+    padding: 4rem 0 1.5rem 9rem;
+    font-size: 3rem;
+    h2 {
+      width: 89%;
+      padding-bottom: 1.5rem;
+      border-bottom: 1px solid $clr-light;
+      font-family: $font-primary-condensed;
+    }
+  }
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 4rem;
+  }
+  &__slider {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 4rem;
+  }
+  &__card {
+    p {
+      font-size: 1rem;
+    }
+  }
+}
+
+// HOME ABOUT
+.homeAbout {
+  &__wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 2rem;
+    padding: 5rem 0;
+    &--text {
+      height: 25rem;
+      h2 {
+        font-family: $font-primary-condensed;
+        border-bottom: 1px solid $clr-light-gray;
+      }
+      h2,
+      p {
+        color: $clr-dark;
+        max-width: 35rem;
+        margin-bottom: 2rem;
+        padding-bottom: 1rem;
+        border-bottom: 1px solid $clr-light-gray;
+      }
+    }
+  }
+  .noBorder {
+    border: none;
+  }
+}
+
+// CTA
+.cta {
+  &__wrapper {
+    padding: 5rem 8rem;
+    h2 {
+      font-family: $font-primary-condensed;
+      font-size: 8rem;
+      font-weight: 200;
+      line-height: 8rem;
+      padding-bottom: 3rem;
+    }
+    i {
+      padding-left: 1rem;
+      font-size: 2rem;
+      color: $clr-light;
     }
   }
 }
