--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -29,6 +29,8 @@
     justify-content: center;
   }
   &__card {
+    z-index: 1;
+    position: relative;
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -48,6 +50,34 @@
     a {
       font-family: $font-primary-condensed;
     }
+    &:hover {
+      span {
+        opacity: 1;
+        transform: scale(1.1, 1.2);
+        transition: 0.5s ease;
+      }
+      i {
+        color: $clr-primary;
+        transition: 0.5s ease;
+      }
+      a {
+        color: $clr-dark;
+        background-color: $clr-light;
+        transition: 0.5s ease;
+      }
+    }
+  }
+  &__hover {
+    z-index: -10;
+    opacity: 0;
+    position: absolute;
+    width: auto;
+    height: auto;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: $clr-dark-gray;
   }
 }
 
@@ -64,6 +94,7 @@
     }
   }
   &__wrapper {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
