--- a/scss/components/_vendor.scss
+++ b/scss/components/_vendor.scss
@@ -66,5 +66,14 @@
 
   .tns-nav {
     position: absolute;
+    button {
+      width: 2rem;
+      height: 2rem;
+      border-radius: 50%;
+      border: none;
+    }
+    &-active {
+      background-color: $clr-dark;
+    }
   }
 }
