--- a/scss/pages/_services.scss
+++ b/scss/pages/_services.scss
@@ -15,12 +15,11 @@
     flex-direction: column;
     align-items: center;
     padding-bottom: 4rem;
+    padding: 0 8rem;
   }
   &__slider {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    gap: 2rem;
   }
   &__section {
     display: flex;
@@ -32,9 +31,9 @@
       font-size: 0.8rem;
       color: $clr-primary;
     }
-    p{
-      font-size: .9rem;
-      a{
+    p {
+      font-size: 0.9rem;
+      a {
         color: $clr-light;
         text-decoration: underline;
       }
@@ -85,6 +84,11 @@
       display: flex;
       flex-direction: row;
       gap: 3rem;
+    }
+    &--column {
+      ul li a {
+        color: $clr-dark;
+      }
     }
   }
 }
