--- a/scss/abstract/_color.scss
+++ b/scss/abstract/_color.scss
@@ -3,6 +3,7 @@ $clr-dark: #252429;
 $clr-gray: #343438;
 $clr-light: #fcfaf2;
 $clr-light-gray: #3e3e42;
+$clr-footer-gray: #89888c;
 $clr-light-primary: #fca8ac;
 $clr-gray-border: #d9d9db;
 $clr-dark-gray: #303033;
