--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -20,8 +20,11 @@
     display: flex;
     flex-direction: row;
     li a {
-      padding: 4.8rem 1rem;
+      padding: 4.81rem 1rem;
       color: $clr-light;
+      font-family: $font-primary-condensed;
+      font-weight: 550;
+      font-size: 1.1rem;
       &:hover {
         border-bottom: 10px solid $clr-primary;
         transition: 0.2s;
