--- a/scss/pages/_blog.scss
+++ b/scss/pages/_blog.scss
@@ -3,23 +3,21 @@
 
 .blog {
   &__title {
-    padding: 5rem 0 0 8rem;
+    padding: 5rem 8rem 0 8rem;
     h2 {
       border-bottom: 1px solid $clr-light-gray;
     }
   }
   &__wrapper {
-    padding: 2rem 0 6rem 8rem;
+    padding: 2rem 8rem 6rem 8rem;
     display: flex;
     flex-direction: column;
-    gap: 4rem;
   }
   &__card {
     display: flex;
     flex-direction: row;
     gap: 2rem;
-    padding-bottom: 2rem;
-    border-bottom: 1px solid $clr-light-gray;
+    margin-top: 1rem;
     &--date {
       @include centerAll;
       flex-direction: column;
@@ -43,5 +41,8 @@
         margin-bottom: 2.6rem;
       }
     }
+  }
+  &__oldEntries {
+    margin-top: 3rem;
   }
 }
