--- a/scss/pages/_contacts.scss
+++ b/scss/pages/_contacts.scss
@@ -7,17 +7,9 @@
     display: flex;
     flex-direction: row;
     gap: 2rem;
-    margin-bottom: 1rem;
   }
   &__howTo {
     max-width: 30rem;
-    span {
-      width: 100%;
-      height: 1px;
-      background-color: $clr-gray-border;
-      display: block;
-      margin-top: 2rem;
-    }
     h2,
     p {
       color: $clr-dark;
@@ -28,9 +20,6 @@
     h2 {
       border-bottom: 1px solid $clr-gray-border;
       margin-bottom: 2rem;
-    }
-    p {
-      padding-top: 2rem;
     }
   }
   &__form {
@@ -45,7 +34,7 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      input {
+      .contact__input {
         width: 80%;
         padding: 0.6rem 1rem;
         background-color: transparent;
@@ -55,11 +44,11 @@
         }
         &:focus {
           color: $clr-light-gray;
-          box-shadow: rgba(250, 85, 93, 0.1) 0px 0px 16px;
+          box-shadow: rgba(250, 85, 93, 0.3) 0px 0px 16px;
         }
       }
       textarea {
-        @extend input;
+        @extend .contact__input;
         width: 100%;
         height: 10rem;
       }
