--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -29,7 +29,7 @@
     justify-content: center;
   }
   &__card {
-    z-index: 1;
+    z-index: 10;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -42,6 +42,8 @@
       padding-top: 2rem;
       padding-bottom: 3rem;
       border-bottom: 3px solid $clr-light-gray;
+      font-family: $font-primary-condensed;
+      font-size: 1.2rem;
     }
     i {
       font-size: 3rem;
@@ -52,7 +54,7 @@
     }
     &:hover {
       span {
-        opacity: 1;
+        background-color: $clr-dark-gray;
         transform: scale(1.1, 1.2);
         transition: 0.5s ease;
       }
@@ -69,7 +71,6 @@
   }
   &__hover {
     z-index: -10;
-    opacity: 0;
     position: absolute;
     width: auto;
     height: auto;
@@ -77,7 +78,7 @@
     right: 0;
     top: 0;
     bottom: 0;
-    background-color: $clr-dark-gray;
+    background-color: transparent;
   }
 }
 
@@ -104,7 +105,6 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    gap: 4rem;
   }
   &__card {
     p {
@@ -132,18 +132,14 @@
         color: $clr-dark;
         max-width: 35rem;
         margin-bottom: 2rem;
-        padding-bottom: 1rem;
-        border-bottom: 1px solid $clr-light-gray;
       }
     }
-  }
-  .noBorder {
-    border: none;
   }
 }
 
 // CTA
 .cta {
+  padding-top: 1rem;
   &__wrapper {
     padding: 5rem 8rem;
     h2 {
