--- a/scss/pages/_services.scss
+++ b/scss/pages/_services.scss
@@ -4,7 +4,7 @@
 // SERVICES BANNER
 .servicesBanner {
   &__title {
-    padding: 5rem 0 0 8rem;
+    padding: 5rem 8rem 0 8rem;
     h2 {
       border-bottom: 1px solid $clr-light-gray;
     }
@@ -14,8 +14,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 4rem;
-    padding: 0 8rem;
+    padding: 2rem 8rem 4rem 8rem;
   }
   &__slider {
     display: flex;
@@ -24,12 +23,19 @@
   &__section {
     display: flex;
     flex-direction: column;
-    gap: 2rem;
   }
   &__card {
+    padding-bottom: 2rem;
+    img {
+      margin-bottom: 1.5rem;
+    }
     a:nth-child(2) {
       font-size: 0.8rem;
       color: $clr-primary;
+      &:hover {
+        color: $clr-dark;
+        transition: 0.5s ease;
+      }
     }
     p {
       font-size: 0.9rem;
@@ -64,8 +70,11 @@
         transition: 0.5s;
       }
     }
-    p {
+    p:nth-child(2) {
       padding-top: 2rem;
+      color: $clr-dark;
+    }
+    p {
       color: $clr-dark;
     }
   }
@@ -88,6 +97,9 @@
     &--column {
       ul li a {
         color: $clr-dark;
+        &:hover {
+          color: $clr-primary;
+        }
       }
     }
   }
